--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: cranlog
 Type: Package
-Title: What the Package Does (Title Case)
+Title: A package for downloading log file from cran log site
 Version: 0.1
 Date: 2016-07-07
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Yan Zhuang
+Maintainer: Yan Zhuang <zhuangyanbuaa@gmail.com>
+Description: A package for downloading log file from cran log site
+License: MIT
 LazyData: TRUE
 RoxygenNote: 5.0.1
+Imports: installr
